Refactored automation for Lenaic's velux.

--- a/automations.yaml
+++ b/automations.yaml
@@ -1,4 +1,4 @@
-- id: LockEmptyHome
+- id: 0_LockEmptyHome
   alias: Verrouille la maison
   trigger:
     - platform: state
@@ -9,7 +9,7 @@
       data:
         entity_id: lock.ti_ar_kaerell
 
-- id: ReduceHeatingForEmptyHome
+- id: 0_ReduceHeatingForEmptyHome
   alias: Reduit le chauffage quand la maison est vide
   trigger:
     - platform: template
@@ -30,7 +30,7 @@
         entity_id: climate.radiateur_salon
         temperature: 18
 
-- id: AugmentHeatingOnOccupiedHome
+- id: 0_AugmentHeatingOnOccupiedHome
   alias: La maison n'est pas vide
   trigger:
     - platform: template
@@ -52,3 +52,54 @@
       data:
         entity_id: climate.radiateur_salon
         temperature: 21
+
+- id: 1_FermeVeluxLenaic
+  alias: Ferme le velux de Lenaïc
+  trigger:
+    # trop froid dehors
+    - platform: template
+      value_template: "{{
+        (states.sensor.sensative_strips_comfort_temperature.state | float) < 19 and
+        (states.sensor.netatmo_terrasse_temperature.state         | float) < 18 and
+        is_state('cover.velux_lenaic','open') }}"
+    # trop chaud dehors
+    - platform: template
+      value_template: "{{
+        (states.sensor.sensative_strips_comfort_temperature.state | float) > 21 and
+        (states.sensor.netatmo_terrasse_temperature.state         | float) > 22 and
+        is_state('cover.velux_lenaic','open') }}"
+    # pluie
+    - platform: template
+      value_template: "{{
+        ((states.sensor.netatmo_pluie_jardin_rain.state | float) > 0.1 or
+          is_state('weather.ti_ar_kaerell','rainy')) and
+          is_state('cover.velux_lenaic','open') }}"
+  action:
+    - service: script.turn_on
+      data:
+        entity_id: script.close_velux_lenaic
+
+- id: 1_OuvreVeluxLenaic
+  alias: Ouvre le vélux de Lenaïc s'il fait assez frais dehors
+  trigger:
+    - platform: template
+      value_template: "{{
+          (states.sensor.netatmo_terrasse_temperature.state         | float) < 21  and
+          (states.sensor.sensative_strips_comfort_temperature.state | float) > 22  and
+          (states.cover.velux_lenaic.attributes.current_position    | float) < 95  and
+          (states.sensor.netatmo_pluie_jardin_rain.state            | float) < 0.1 and
+          not is_state('weather.ti_ar_kaerell','rainy') }}"
+  action:
+    - service: script.turn_on
+      data:
+        entity_id: script.open_velux_lenaic
+
+- id: 1_FermeVoletLenaic
+  alias: Ferme le volet de Lenaïc
+  trigger:
+    - platform: template
+      value_template: "{{
+        (states.sensor.netatmo_terrasse_temperature.state         | float) > 26 and
+        (states.sensor.sensative_strips_comfort_temperature.state | float) > 25 and
+        is_state('weather.ti_ar_kaerell','sunny') and
+        is_state('cover.velux_lenaic','open') }}"
