--- a/automations.yaml
+++ b/automations.yaml
@@ -1,158 +1,148 @@
 - id: LockEmptyHome
   alias: 0.0 Verrouille la maison
   trigger:
-    - platform: state
-      entity_id: sensor.home
-      to: empty
+  - platform: state
+    entity_id: sensor.home
+    to: empty
   action:
-    - service: lock.lock
-      data:
-        entity_id: lock.ti_ar_kaerell
-
+  - service: lock.lock
+    data:
+      entity_id: lock.ti_ar_kaerell
 - id: ReduceHeatingForEmptyHome
   alias: 0.1 Reduit le chauffage quand la maison est vide
   trigger:
-    - platform: template
-      value_template: '
-        {{ (states.proximity.home1.state | float) > 1250 and
-           (states.proximity.home2.state | float) > 1250 }}'
+  - platform: template
+    value_template: ' {{ (states.proximity.home1.state | float) > 1250 and (states.proximity.home2.state
+      | float) > 1250 }}'
+  - at: '23:00:00'
+    platform: time
+  condition:
+  - condition: template
+    value_template: '{{states.climate.radiateur_parents.attributes.preset_mode ==
+      "none"}}'
   action:
-    - service: climate.set_temperature
-      data:
-        entity_id: climate.radiateur_parents
-        temperature: 18
-    - service: climate.set_temperature
-      data:
-        entity_id: climate.radiateur_bureau
-        temperature: 18
-    - service: climate.set_temperature
-      data:
-        entity_id: climate.radiateur_salon
-        temperature: 18
-
+  - data:
+      entity_id: climate.radiateur_parents
+      temperature: 18
+    service: climate.set_temperature
+  - data:
+      entity_id: climate.radiateur_bureau
+      temperature: 18
+    service: climate.set_temperature
+  - data:
+      entity_id: climate.radiateur_salon
+      temperature: 18
+    service: climate.set_temperature
 - id: AugmentHeatingOnOccupiedHome
   alias: 0.2 Monte le chauffage quand la maison n'est pas vide
   trigger:
-    - platform: template
-      value_template: '
-        {{ (states.proximity.home1.state | float) < 1250 or
-           (states.proximity.home2.state | float) < 1250 }}'
-      for:
-        minutes: 3
+  - for:
+      minutes: 3
+    platform: template
+    value_template: ' {{ (states.proximity.home1.state | float) < 1250 or (states.proximity.home2.state
+      | float) < 1250 }}'
+  - at: '17:30:00'
+    platform: time
+  - at: 06:00:00
+    platform: time
   action:
-    - service: climate.set_temperature
-      data:
-        entity_id: climate.radiateur_parents
-        temperature: 21
-    - service: climate.set_temperature
-      data:
-        entity_id: climate.radiateur_bureau
-        temperature: 21
-    - service: climate.set_temperature
-      data:
-        entity_id: climate.radiateur_salon
-        temperature: 21
-
+  - data:
+      entity_id: climate.radiateur_parents
+      temperature: 20
+    service: climate.set_temperature
+  - data:
+      entity_id: climate.radiateur_bureau
+      temperature: 20
+    service: climate.set_temperature
+  - data:
+      entity_id: climate.radiateur_salon
+      temperature: 20
+    service: climate.set_temperature
 - id: FermeVeluxLenaic
   alias: 1.0 Ferme le velux de Lenaïc
   trigger:
-    - platform: template
-      value_template: "{{
-        (states.sensor.sensative_strips_comfort_temperature.state | float) < 19 and
-        (states.sensor.netatmo_terrasse_temperature.state         | float) < 18 and
-        is_state('cover.velux_lenaic','open') }}"
-    - platform: template
-      value_template: "{{
-        (states.sensor.sensative_strips_comfort_temperature.state | float) > 21 and
-        (states.sensor.netatmo_terrasse_temperature.state         | float) > 22 and
-        is_state('cover.velux_lenaic','open') }}"
-    - platform: template
-      value_template: "{{
-        ((states.sensor.netatmo_pluie_jardin_rain.state | float) > 0.1 or
-          is_state('weather.ti_ar_kaerell','rainy')) and
-          is_state('cover.velux_lenaic','open') }}"
+  - platform: template
+    value_template: '{{ (states.sensor.sensative_strips_comfort_temperature.state
+      | float) < 19 and (states.sensor.netatmo_terrasse_temperature.state         |
+      float) < 18 and is_state(''cover.velux_lenaic'',''open'') }}'
+  - platform: template
+    value_template: '{{ (states.sensor.sensative_strips_comfort_temperature.state
+      | float) > 21 and (states.sensor.netatmo_terrasse_temperature.state         |
+      float) > 22 and is_state(''cover.velux_lenaic'',''open'') }}'
+  - platform: template
+    value_template: '{{ ((states.sensor.netatmo_pluie_jardin_rain.state | float) >
+      0.1 or is_state(''weather.ti_ar_kaerell'',''rainy'')) and is_state(''cover.velux_lenaic'',''open'')
+      }}'
   action:
-    - service: script.turn_on
-      data:
-        entity_id: script.close_velux_lenaic
-
+  - service: script.turn_on
+    data:
+      entity_id: script.close_velux_lenaic
 - id: OuvreVeluxLenaic
   alias: 1.1 Ouvre le vélux de Lenaïc s'il fait assez frais dehors
   trigger:
-    - platform: template
-      value_template: "{{
-          (states.sensor.netatmo_terrasse_temperature.state         | float) < 21  and
-          (states.sensor.sensative_strips_comfort_temperature.state | float) > 22  and
-          (states.cover.velux_lenaic.attributes.current_position    | float) < 95  and
-          (states.sensor.netatmo_pluie_jardin_rain.state            | float) < 0.1 and
-          not is_state('weather.ti_ar_kaerell','rainy') }}"
+  - platform: template
+    value_template: '{{ (states.sensor.netatmo_terrasse_temperature.state         |
+      float) < 21  and (states.sensor.sensative_strips_comfort_temperature.state |
+      float) > 22  and (states.cover.velux_lenaic.attributes.current_position    |
+      float) < 95  and (states.sensor.netatmo_pluie_jardin_rain.state            |
+      float) < 0.1 and not is_state(''weather.ti_ar_kaerell'',''rainy'') }}'
   action:
-    - service: script.turn_on
-      data:
-        entity_id: script.open_velux_lenaic
-
+  - service: script.turn_on
+    data:
+      entity_id: script.open_velux_lenaic
 - id: FermeVoletLenaic
   alias: 1.2 Ferme le volet de Lenaïc
   trigger:
-    - platform: template
-      value_template: "{{
-        (states.sensor.netatmo_terrasse_temperature.state         | float) > 26 and
-        (states.sensor.sensative_strips_comfort_temperature.state | float) > 25 and
-        is_state('weather.ti_ar_kaerell','sunny') and
-        is_state('cover.volet_lenaic','open') }}"
+  - platform: template
+    value_template: '{{ (states.sensor.netatmo_terrasse_temperature.state         |
+      float) > 26 and (states.sensor.sensative_strips_comfort_temperature.state |
+      float) > 25 and is_state(''weather.ti_ar_kaerell'',''sunny'') and is_state(''cover.volet_lenaic'',''open'')
+      }}'
   action:
-    - service: script.turn_on
-      data:
-        entity_id: script.secure_close_volet_lenaic
-
+  - service: script.turn_on
+    data:
+      entity_id: script.secure_close_volet_lenaic
 - id: FermeVeluxPalier
   alias: 2.0 Ferme le velux du palier
   trigger:
-    - platform: template
-      value_template: "{{
-        (states.sensor.netatmo_palier_temperature.state   | float) < 19 and
-        (states.sensor.netatmo_terrasse_temperature.state | float) < 18 and
-        is_state('cover.velux_palier','open') }}"
-    - platform: template
-      value_template: "{{
-        (states.sensor.netatmo_palier_temperature.state   | float) > 21 and
-        (states.sensor.netatmo_terrasse_temperature.state | float) > 22 and
-        is_state('cover.velux_palier','open') }}"
-    - platform: template
-      value_template: "{{
-        ((states.sensor.netatmo_pluie_jardin_rain.state | float) > 0.1 or
-          is_state('weather.ti_ar_kaerell','rainy')) and
-          is_state('cover.velux_palier','open') }}"
+  - platform: template
+    value_template: '{{ (states.sensor.netatmo_palier_temperature.state   | float)
+      < 19 and (states.sensor.netatmo_terrasse_temperature.state | float) < 18 and
+      is_state(''cover.velux_palier'',''open'') }}'
+  - platform: template
+    value_template: '{{ (states.sensor.netatmo_palier_temperature.state   | float)
+      > 21 and (states.sensor.netatmo_terrasse_temperature.state | float) > 22 and
+      is_state(''cover.velux_palier'',''open'') }}'
+  - platform: template
+    value_template: '{{ ((states.sensor.netatmo_pluie_jardin_rain.state | float) >
+      0.1 or is_state(''weather.ti_ar_kaerell'',''rainy'')) and is_state(''cover.velux_palier'',''open'')
+      }}'
   action:
-    - service: script.turn_on
-      data:
-        entity_id: script.close_velux_lenaic
-
+  - service: script.turn_on
+    data:
+      entity_id: script.close_velux_lenaic
 - id: OuvreVeluxPalier
   alias: 2.1 Ouvre le vélux du palier s'il fait assez frais dehors
   trigger:
-    - platform: template
-      value_template: "{{
-          (states.sensor.netatmo_terrasse_temperature.state       | float) < 21  and
-          (states.sensor.netatmo_palier_temperature.state         | float) > 22  and
-          (states.cover.velux_palier.attributes.current_position  | float) < 95  and
-          (states.sensor.netatmo_pluie_jardin_rain.state          | float) < 0.1 and
-          not is_state('weather.ti_ar_kaerell','rainy') }}"
+  - platform: template
+    value_template: '{{ (states.sensor.netatmo_terrasse_temperature.state       |
+      float) < 21  and (states.sensor.netatmo_palier_temperature.state         | float)
+      > 22  and (states.cover.velux_palier.attributes.current_position  | float) <
+      95  and (states.sensor.netatmo_pluie_jardin_rain.state          | float) < 0.1
+      and not is_state(''weather.ti_ar_kaerell'',''rainy'') }}'
   action:
-    - service: script.turn_on
-      data:
-        entity_id: script.open_velux_lenaic
-
+  - service: script.turn_on
+    data:
+      entity_id: script.open_velux_lenaic
 - id: FermeVoletPalier
   alias: 2.2 Ferme le volet du palier
   trigger:
-    - platform: template
-      value_template: "{{
-        (states.sensor.netatmo_terrasse_temperature.state | float) > 26 and
-        (states.sensor.netatmo_palier_temperature.state   | float) > 25 and
-        is_state('weather.ti_ar_kaerell','sunny') and
-        is_state('cover.volet_palier','open') }}"
+  - platform: template
+    value_template: '{{ (states.sensor.netatmo_terrasse_temperature.state | float)
+      > 26 and (states.sensor.netatmo_palier_temperature.state   | float) > 25 and
+      is_state(''weather.ti_ar_kaerell'',''sunny'') and is_state(''cover.volet_palier'',''open'')
+      }}'
   action:
-    - service: script.turn_on
-      data:
-        entity_id: script.secure_close_volet_lenaic
+  - service: script.turn_on
+    data:
+      entity_id: script.secure_close_volet_lenaic
