--- a/includes/climates/Tahoma.yaml
+++ b/includes/climates/Tahoma.yaml
@@ -4,7 +4,11 @@ sensors:
   entity_id: sensor.tdeg_parents
   away_temp: 16
   eco_temp: 19
-  comfort_temp: 21
+  comfort_temp: 20
   anti_freeze_temp: 8
 - name: "Radiateur Salon"
   entity_id: sensor.tdeg_salon
+  away_temp: 16
+  eco_temp: 19
+  comfort_temp: 20
+  anti_freeze_temp: 8
