--- a/automations.yaml
+++ b/automations.yaml
@@ -8,8 +8,42 @@
   - service: lock.lock
     data:
       entity_id: lock.ti_ar_kaerell
-- id: ReduceHeatingForEmptyHome
-  alias: 0.1 Reduit le chauffage quand la maison est vide
+- id: ReduceHeatingForEmptyHome0
+  alias: 0.1.0 Salon Reduit le chauffage quand la maison est vide
+  trigger:
+  - platform: template
+    value_template: ' {{ (states.proximity.home1.state | float) > 1250 and (states.proximity.home2.state
+      | float) > 1250 }}'
+  - at: '23:00:00'
+    platform: time
+  condition:
+  - condition: template
+    value_template: '{{states.climate.radiateur_salon.attributes.preset_mode ==
+      "none"}}'
+  action:
+  - data:
+      entity_id: climate.radiateur_salon
+      temperature: 18
+    service: climate.set_temperature
+- id: ReduceHeatingForEmptyHome1
+  alias: 0.1.1 Bureau Reduit le chauffage quand la maison est vide
+  trigger:
+  - platform: template
+    value_template: ' {{ (states.proximity.home1.state | float) > 1250 and (states.proximity.home2.state
+      | float) > 1250 }}'
+  - at: '23:00:00'
+    platform: time
+  condition:
+  - condition: template
+    value_template: '{{states.climate.radiateur_bureau.attributes.preset_mode ==
+      "none"}}'
+  action:
+  - data:
+      entity_id: climate.radiateur_bureau
+      temperature: 18
+    service: climate.set_temperature
+- id: ReduceHeatingForEmptyHome2
+  alias: 0.1.2 Chambre Parents Reduit le chauffage quand la maison est vide
   trigger:
   - platform: template
     value_template: ' {{ (states.proximity.home1.state | float) > 1250 and (states.proximity.home2.state
@@ -25,16 +59,8 @@
       entity_id: climate.radiateur_parents
       temperature: 18
     service: climate.set_temperature
-  - data:
-      entity_id: climate.radiateur_bureau
-      temperature: 18
-    service: climate.set_temperature
-  - data:
-      entity_id: climate.radiateur_salon
-      temperature: 18
-    service: climate.set_temperature
-- id: AugmentHeatingOnOccupiedHome
-  alias: 0.2 Monte le chauffage quand la maison n'est pas vide
+- id: AugmentHeatingOnOccupiedHome0
+  alias: 0.2.0 Salon Monte le chauffage quand la maison n'est pas vide
   trigger:
   - for:
       minutes: 3
@@ -43,19 +69,57 @@
       | float) < 1250 }}'
   - at: '17:30:00'
     platform: time
-  - at: 06:00:00
+  - at: '06:00:00'
     platform: time
+  condition:
+  - condition: template
+    value_template: '{{states.climate.radiateur_salon.attributes.preset_mode ==
+      "none"}}'
   action:
   - data:
-      entity_id: climate.radiateur_parents
+      entity_id: climate.radiateur_salon
       temperature: 20
     service: climate.set_temperature
+- id: AugmentHeatingOnOccupiedHome
+  alias: 0.2.1 Bureau Monte le chauffage quand la maison n'est pas vide
+  trigger:
+  - for:
+      minutes: 3
+    platform: template
+    value_template: ' {{ (states.proximity.home1.state | float) < 1250 or (states.proximity.home2.state
+      | float) < 1250 }}'
+  - at: '17:30:00'
+    platform: time
+  - at: '06:00:00'
+    platform: time
+  condition:
+  - condition: template
+    value_template: '{{states.climate.radiateur_bureau.attributes.preset_mode ==
+      "none"}}'
+  action:
   - data:
       entity_id: climate.radiateur_bureau
       temperature: 20
     service: climate.set_temperature
+- id: AugmentHeatingOnOccupiedHome
+  alias: 0.2.2 Chambre Parents Monte le chauffage quand la maison n'est pas vide
+  trigger:
+  - for:
+      minutes: 3
+    platform: template
+    value_template: ' {{ (states.proximity.home1.state | float) < 1250 or (states.proximity.home2.state
+      | float) < 1250 }}'
+  - at: '17:30:00'
+    platform: time
+  - at: '06:00:00'
+    platform: time
+  condition:
+  - condition: template
+    value_template: '{{states.climate.radiateur_parents.attributes.preset_mode ==
+      "none"}}'
+  action:
   - data:
-      entity_id: climate.radiateur_salon
+      entity_id: climate.radiateur_parents
       temperature: 20
     service: climate.set_temperature
 - id: FermeVeluxLenaic
