--- a/configuration.yaml
+++ b/configuration.yaml
@@ -51,6 +51,7 @@ logger:           !include includes/logger.yaml
 lovelace:         !include includes/lovelace.yaml
 mqtt:             !include includes/mqtt.yaml
 netatmo:          !include includes/netatmo.yaml
+plex:             !include includes/plex.yaml
 proximity:        !include includes/proximity.yaml
 script:           !include includes/scripts.yaml
 shell_command:    !include includes/shell_command.yaml
