add input select to ui.

--- a/ui/rez/5_bureau.yaml
+++ b/ui/rez/5_bureau.yaml
@@ -8,3 +8,7 @@ cards:
       name: Volet
 - type: thermostat
   entity: climate.radiateur_bureau
+- type: entities
+  title: ""
+  entities:
+    - entity: input_select.qubino
