--- a/.gitignore
+++ b/.gitignore
@@ -53,6 +53,7 @@ www/deepstack
 deps
 custom_components/tahoma/__pycache__
 custom_components/tahoma/__pycache__/**
+**/__pycache__/**
 
 # Ensure these YAML files are ignored, otherwise your secret data/credentials will leak.
 ip_bans.yaml
