add input select to ui.

--- a/ui/etage/2_velux.yaml
+++ b/ui/etage/2_velux.yaml
@@ -38,6 +38,10 @@ cards:
       entity: switch.toggle_both_lenaic
   - type: thermostat
     entity: climate.radiateur_lenaic
+  - type: entities
+    title: ""
+    entities:
+      - entity: input_select.qubino_lenaic
 - type: vertical-stack
   cards:
   - type: custom:vertical-stack-in-card
