--- a/ui/etage/2_velux.yaml
+++ b/ui/etage/2_velux.yaml
@@ -14,7 +14,7 @@ cards:
     - type: entity-button
       name: Les deux
       entity: switch.toggle_both_palier
-- type: custom:vertical-stack-in-card
+- type: vertical-stack
   title: Chambre de Lenaïc
   cards:
   - type: horizontal-stack
@@ -36,9 +36,11 @@ cards:
     - type: entity-button
       name: Les deux
       entity: switch.toggle_both_lenaic
-  - type: thermostat
-    entity: climate.radiateur_lenaic
-  - type: entities
-    title: ""
-    entities:
-      - entity: input_select.qubino_lenaic
+  - type: custom:vertical-stack-in-card
+    cards:
+    - type: thermostat
+      entity: climate.radiateur_lenaic
+    - type: entities
+      title: ""
+      entities:
+        - entity: input_select.qubino_lenaic
