--- a/includes/device_trackers/CompositeVincent.yaml
+++ b/includes/device_trackers/CompositeVincent.yaml
@@ -2,5 +2,5 @@ platform: composite
 name: Vincent composite
 time_as: local
 entity_id:
-#  - device_tracker.tile_84ff3b083add401d
+  - device_tracker.tile_84ff3b083add401d
   - device_tracker.life360_vincent
