--- a/ui/etage/2_palier.yaml
+++ b/ui/etage/2_palier.yaml
@@ -1,12 +1,22 @@
-type: horizontal-stack
+type: vertical-stack
 title: Palier
 cards:
-- type: entity-button
-  name: Velux
-  entity: switch.toggle_velux_palier
-- type: entity-button
-  name: Volet
-  entity: switch.toggle_volet_palier
-- type: entity-button
-  name: Les deux
-  entity: switch.toggle_both_palier
+- type: horizontal-stack
+  cards:
+  - type: entity-button
+    name: Palier 1
+    entity: light.lux_palier_1
+  - type: entity-button
+    name: Palier 2
+    entity: light.lux_palier_2
+- type: horizontal-stack
+  cards:
+  - type: entity-button
+    name: Velux
+    entity: switch.toggle_velux_palier
+  - type: entity-button
+    name: Volet
+    entity: switch.toggle_volet_palier
+  - type: entity-button
+    name: Les deux
+    entity: switch.toggle_both_palier
