--- a/ui/etage/4_parents.yaml
+++ b/ui/etage/4_parents.yaml
@@ -5,9 +5,9 @@ cards:
   cards:
   - type: light
     entity: light.lux_parents_1
-    name: Lux 1
+    name: Parents 1
   - type: light
     entity: light.lux_parents_2
-    name: Lux 2
+    name: Parents 2
 - type: thermostat
   entity: climate.radiateur_parents
