--- a/ui/etage/1_temperature.yaml
+++ b/ui/etage/1_temperature.yaml
@@ -93,6 +93,15 @@ cards:
 - type: horizontal-stack
   cards:
   - type: gauge
+    name: "Humidité Palier"
+    entity: sensor.humidite_salon
+    min: 40
+    max: 70
+    severity:
+      green: 50
+      yellow: 60
+      red: 70
+  - type: gauge
     name: "CO2 Palier"
     entity: sensor.netatmo_salon_co2
     min: 0
@@ -101,12 +110,3 @@ cards:
       green: 0
       yellow: 750
       red: 1500
-  - type: gauge
-    name: "Humidité Salon"
-    entity: sensor.humidite_salon
-    min: 40
-    max: 70
-    severity:
-      green: 50
-      yellow: 60
-      red: 70
