--- a/automations.yaml
+++ b/automations.yaml
@@ -153,11 +153,11 @@
   alias: 1.0 Ferme le velux de Lenaïc
   trigger:
   - platform: template
-    value_template: '{{ (states.sensor.sensative_strips_comfort_temperature.state
+    value_template: '{{ (states.sensor.tdeg_lenaic.state
       | float) < 19 and (states.sensor.netatmo_terrasse_temperature.state         |
       float) < 18 and is_state(''cover.velux_lenaic'',''open'') }}'
   - platform: template
-    value_template: '{{ (states.sensor.sensative_strips_comfort_temperature.state
+    value_template: '{{ (states.sensor.tdeg_lenaic.state
       | float) > 21 and (states.sensor.netatmo_terrasse_temperature.state         |
       float) > 22 and is_state(''cover.velux_lenaic'',''open'') }}'
   - platform: template
@@ -173,7 +173,7 @@
   trigger:
   - platform: template
     value_template: '{{ (states.sensor.netatmo_terrasse_temperature.state         |
-      float) < 21  and (states.sensor.sensative_strips_comfort_temperature.state |
+      float) < 21  and (states.sensor.tdeg_lenaic.state |
       float) > 22  and (states.cover.velux_lenaic.attributes.current_position    |
       float) < 95  and (states.sensor.netatmo_pluie_jardin_rain.state            |
       float) < 0.1 and not is_state(''weather.ti_ar_kaerell'',''rainy'') }}'
@@ -186,7 +186,7 @@
   trigger:
   - platform: template
     value_template: '{{ (states.sensor.netatmo_terrasse_temperature.state         |
-      float) > 26 and (states.sensor.sensative_strips_comfort_temperature.state |
+      float) > 26 and (states.sensor.tdeg_lenaic.state |
       float) > 25 and is_state(''weather.ti_ar_kaerell'',''sunny'') and is_state(''cover.volet_lenaic'',''open'')
       }}'
   - event: sunset
