--- a/includes/climates/RadiateurBureau.yaml
+++ b/includes/climates/RadiateurBureau.yaml
@@ -1,7 +1,7 @@
 platform: generic_thermostat
 name: Radiateur Bureau
 heater: switch.qubino_goap_zmnhjd1_flush_dimmer_pilot_wire_switch
-target_sensor: sensor.sensative_strips_comfort_temperature_2
+target_sensor: sensor.tdeg_bureau
 initial_hvac_mode: heat
 target_temp: 20
 away_temp: 16
