--- a/includes/climates/RadiateurLenaic.yaml
+++ b/includes/climates/RadiateurLenaic.yaml
@@ -1,7 +1,7 @@
 platform: generic_thermostat
 name: Radiateur Lenaic
 heater: switch.qubino_goap_zmnhjd1_flush_dimmer_pilot_wire_switch_2
-target_sensor: sensor.sensative_strips_comfort_temperature
+target_sensor: sensor.tdeg_lenaic
 initial_hvac_mode: heat
 target_temp: 20
 away_temp: 16
