--- a/includes/climates/TemperatureChambreLenaic.yaml
+++ b/includes/climates/TemperatureChambreLenaic.yaml
@@ -1,6 +1,6 @@
 platform: generic_thermostat
 name: Température Chambre Lenaïc
 heater: input_boolean.fake_heater
-target_sensor: sensor.sensative_strips_comfort_temperature
+target_sensor: sensor.tdeg_lenaic
 initial_hvac_mode: "off"
 target_temp: 21
