--- a/ui/etage/1_temperature.yaml
+++ b/ui/etage/1_temperature.yaml
@@ -44,7 +44,7 @@ cards:
     - value: 35
       color: "#FF1500"
     entities:
-    - entity: sensor.sensative_strips_comfort_temperature
+    - entity: sensor.tdeg_lenaic
       name: "Lenaïc"
   - type: custom:mini-graph-card
     hours_to_show: 24
