--- a/ui/rez/1_temperature_humidity.yaml
+++ b/ui/rez/1_temperature_humidity.yaml
@@ -45,7 +45,7 @@ cards:
     - value: 35
       color: "#FF1500"
     entities:
-    - entity: sensor.tdeg_salon
+    - entity: sensor.temperature_salon
       name: "Salon"
   - type: custom:mini-graph-card
     hours_to_show: 24
