--- a/ui/etage/2_lenaic.yaml
+++ b/ui/etage/2_lenaic.yaml
@@ -9,17 +9,17 @@ cards:
   - type: light
     entity: light.lux_lenaic_2
     name: Lenaïc 2
-- type: horizontal-stack
-  cards:
-  - type: entity-button
-    name: Velux
-    entity: switch.toggle_velux_lenaic
-  - type: entity-button
-    name: Volet
-    entity: switch.toggle_volet_lenaic
-  - type: entity-button
-    name: Les deux
-    entity: switch.toggle_both_lenaic
+#- type: horizontal-stack
+#  cards:
+#  - type: entity-button
+#    name: Velux
+#    entity: switch.toggle_velux_lenaic
+#  - type: entity-button
+#    name: Volet
+#    entity: switch.toggle_volet_lenaic
+#  - type: entity-button
+#    name: Les deux
+#    entity: switch.toggle_both_lenaic
 - type: custom:vertical-stack-in-card
   cards:
   - type: thermostat
