--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@
 !includes/cameras/
 !includes/climates/
 !custom_components/
+!unused_customs/
 !includes/device_trackers/
 !includes/image_processings/
 !includes/
